--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 rvm:
-  - 1.8.7
-  - 1.9.2
-  - rbx
-  - rbx-2.0
-  - ree
-  - jruby
+  - 1.9.3
+  - jruby-19mode
+  - ruby-head
+
+matrix:
+  allow_failures:
+    - rvm: ruby-head
